[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spindlex"
version = "0.6.6"

description = "A modern, high-performance SSHv2 and SFTP client/server library"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Stratza Labs"},
    {name = "David Azani", email = "david@stratza.com"},
    {name = "Adi Roth", email = "adi@stratza.com"}
]
maintainers = [
    {name = "Stratza Labs"},
    {name = "David Azani", email = "david@stratza.com"},
    {name = "Adi Roth", email = "adi@stratza.com"}
]
keywords = ["ssh", "sftp", "client", "server", "cryptography", "security", "automation", "devops", "asyncio", "high-performance", "remote-execution", "file-transfer", "modern-ssh", "secure-shell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=41.0.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.optional-dependencies]
gssapi = [
    "gssapi>=1.8.0; sys_platform!='win32'",
]
dev = [
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=2.0",
    "pytest-timeout>=2.0.0",
    "tox>=4.0",
    "ruff>=0.1.0",
    "bandit[toml]>=1.7.5",
    "safety>=2.3.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest-docker>=2.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-minify-plugin>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "pymdown-extensions>=10.0",
    "pygments>=2.15.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=2.0",
    "pytest-timeout>=2.0.0",
    "coverage>=6.0",
]

[project.urls]
Homepage = "https://github.com/stratza/spindlex"
Documentation = "https://spindlex.readthedocs.io/"
Repository = "https://github.com/stratza/spindlex"
Issues = "https://github.com/stratza/spindlex/issues"
Changelog = "https://github.com/stratza/spindlex/blob/main/docs/changelog.md"

[project.scripts]
spindlex-keygen = "spindlex.tools.keygen:main"
spindlex-benchmark = "spindlex.tools.benchmark:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spindlex*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
spindlex = ["py.typed"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true



[[tool.mypy.overrides]]
module = "gssapi.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/integration/config"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-v",
    "-m not slow and not performance",
]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "performance: Performance and benchmark tests",
    "security: Security-focused tests",
    "slow: Tests that take a long time to run",
]

[tool.coverage.run]
source = ["spindlex"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/examples/*",
    "spindlex/tools/benchmark.py",
]

[tool.coverage.paths]
source = [
    "spindlex",
    "**/spindlex",
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == "__main__":',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    ]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311,py312,py313,lint,type-check,security
isolated_build = True

[testenv]
deps = 
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.21.0
commands = 
    pytest tests/ -v --cov=spindlex --cov-report=term --cov-report=xml

[testenv:lint]
deps = 
    ruff>=0.1.0
commands = 
    ruff check spindlex tests
    ruff format --check spindlex tests

[testenv:type-check]
deps = 
    mypy>=1.0.0
    types-all
commands = 
    mypy spindlex

[testenv:security]
deps = 
    bandit[toml]>=1.7.5
    safety>=2.3.0
commands = 
    bandit -r spindlex -c pyproject.toml
    safety check

[testenv:docs]
deps = 
    mkdocs>=1.5.0
    mkdocs-material>=9.1.0
    mkdocstrings[python]>=0.22.0
commands = 
    mkdocs build
"""

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["spindlex"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4", "PT"]
ignore = [
    "S101", # Use of `assert` detected (common in tests/libraries)
    "E501", # Line too long (handled by formatter)
    "UP035", # Use `typing` instead of `typing_extensions`
    "UP007", # Use `X | Y` for type annotations
    "UP045", # Use `X | None` for type annotations
    "F403", # Star imports used
    "F405", # Undefined names from star imports
    "S110", # try-except-pass (silent errors in cleanup)
    "E701", # Multiple statements on one line (colon)
    "B904", # raise-without-from-inside-except
    "B023", # function-uses-loop-variable
    "S104", # hardcoded-bind-all-interfaces
    "S105", # hardcoded-password-string
    "S106", # hardcoded-password-func-arg
    "S108", # hardcoded-temp-file
    "S112", # try-except-continue
    "S303", # suspicious-insecure-hash-usage
    "S324", # hashlib-insecure-hash-function
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["S", "PT", "E501"]
"examples/*" = ["S", "T201"]
"scripts/*" = ["T201"]

[tool.ruff.lint.isort]
# Keep ruff's import sorter aligned with the standalone isort config
# ([tool.isort]) so the two tools do not disagree about first-party
# imports (blank line between ``import pytest`` and ``from spindlex...``).
known-first-party = ["spindlex"]
