[metadata]
name = spindlex
description = SpindleX - A pure-Python SSHv2 client/server library with modern security
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/daveops.world/development/python/spindlex
author = SpindleX Team
author_email = team@spindlex.dev
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.9
install_requires =
    cryptography>=41.0.0
    typing-extensions>=4.0.0; python_version<"3.10"

[options.packages.find]
include = spindlex*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    isort>=5.12.0
    mypy>=1.0.0
    flake8>=6.0.0
    pre-commit>=3.0.0
docs =
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0
    myst-parser>=1.0.0
gssapi =
    gssapi>=1.8.0; sys_platform!="win32"
async =
    asyncio-dgram>=2.1.0

[options.entry_points]
console_scripts =
    spindlex-keygen = spindlex.tools.keygen:main
    spindlex-benchmark = spindlex.tools.benchmark:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    .tox

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-tests.*]
disallow_untyped_defs = False